interfaces/cups-control: implement cups-control provided by snap
References:
https://forum.snapcraft.io/t/interface-request-cups-control-on-cups-snap-and-including-d-bus/15233/9

--- a/tests/lib/snaps/test-snapd-policy-app-provider-core/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-policy-app-provider-core/meta/snap.yaml
@@ -15,6 +15,7 @@ slots:
     content: test-content
     read:
     - $SNAP/content
+  cups-control: null
   dbus-session:
     interface: dbus
     bus: session
@@ -67,6 +68,9 @@ apps:
   content-read:
     command: bin/run
     slots: [ content-read ]
+  cups-control:
+    command: bin/run
+    slots: [ cups-control ]
   dbus-session:
     command: bin/run
     slots: [ dbus-session ]
