interfaces: add cups companion interface to cups-control
On systems where the slot is provided by an app snap, the cups interface is
the companion interface to the cups-control interface. The design of these
interfaces is based on the idea that the slot implementation (eg cupsd) is
expected to query snapd on if the cups-control interface is connected or not
and the print service will mediate admin functionality (ie, the rules in
these interfaces allow connecting to the print service, but do not implement
enforcement rules; it is up to the print service to provide enforcement).

For now we limit this to app-providing slot implementations since there
are currently no classic systems with a mediating cupsd. We can revisit
this when it becomes available.

--- a/tests/lib/snaps/test-snapd-policy-app-provider-core/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-policy-app-provider-core/meta/snap.yaml
@@ -15,6 +15,7 @@ slots:
     content: test-content
     read:
     - $SNAP/content
+  cups: null
   cups-control: null
   dbus-session:
     interface: dbus
@@ -68,6 +69,9 @@ apps:
   content-read:
     command: bin/run
     slots: [ content-read ]
+  cups:
+    command: bin/run
+    slots: [ cups ]
   cups-control:
     command: bin/run
     slots: [ cups-control ]
