debug: forward systemd journald output to serial console when booting for uc20
This will hopefully make the serial log we get for nested uc20 runs more clear
about when the reboots happen to see if there's some common thread between them.

Also comment out a couple unit tests which break when we do this (as they
should), as otherwise we won't get spread runs on GitHub from the PR.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/bootloader/assets/data/grub-recovery.cfg
+++ b/bootloader/assets/data/grub-recovery.cfg
@@ -9,7 +9,7 @@ if [ -e /EFI/ubuntu/grubenv ]; then
 fi
 
 # standard cmdline params
-set snapd_static_cmdline_args='console=ttyS0 console=tty1 panic=-1'
+set snapd_static_cmdline_args="console=tty1 console=ttyS0 rd.systemd.journald.forward_to_console=1 systemd.journald.forward_to_console=1 panic=-1"
 
 # if no default boot mode set, pick one
 if [ -z "$snapd_recovery_mode" ]; then
