--- a/bootloader/assets/data/grub.cfg
+++ b/bootloader/assets/data/grub.cfg
@@ -7,7 +7,7 @@ set timeout_style=hidden
 # load only kernel_status from the bootenv
 load_env --file /EFI/ubuntu/grubenv kernel_status snapd_extra_cmdline_args
 
-set snapd_static_cmdline_args='console=ttyS0 console=tty1 panic=-1'
+set snapd_static_cmdline_args="console=tty1 console=ttyS0 rd.systemd.journald.forward_to_console=1 systemd.journald.forward_to_console=1 panic=-1"
 
 set kernel=kernel.efi
 
