--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -98,7 +98,7 @@ jobs:
           if ! echo "${{ matrix.gochannel }}" | grep -E '1\.(9|10)' ; then
               # and skip with other versions
               export SKIP_GOFMT=1
-              echo "Formatting checks will be skipped"
+              echo "Formatting checks will be skipped due to the use of Go version ${{ matrix.gochannel }}"
           fi
           ./run-checks --static
     - name: Build C
