--- a/tests/nested/manual/core-early-config/task.yaml
+++ b/tests/nested/manual/core-early-config/task.yaml
@@ -61,3 +61,7 @@ execute: |
     # early config is witnessed by install hook of the pc gadget
     execute_remote "cat /var/snap/pc/common/debug.txt" | MATCH "/dev/null"
     execute_remote "test -L /etc/systemd/system/rsyslog.service"
+
+    # timezone is set
+    execute_remote "cat /etc/timezone" | MATCH "Europe/Malta"
+    execute_remote "readlink -f /etc/localtime" | MATCH "Europe/Malta"
