tests: improve timezone nested tests (thanks to Pawel)

--- a/tests/nested/manual/core20-early-config/task.yaml
+++ b/tests/nested/manual/core20-early-config/task.yaml
@@ -69,3 +69,4 @@ execute: |
     # timezone is set
     execute_remote "cat /etc/timezone" | MATCH "Europe/Malta"
     execute_remote "readlink -f /etc/localtime" | MATCH "Europe/Malta"
+    execute_remote "cat /var/snap/pc/common/debug.txt" | MATCH "localtime symlink: /usr/share/zoneinfo/Europe/Malta"
