cmd/snap-preseed: use snapd from the deb if newer than from seeds
* Check snapd version from the deb under chroot when preseeding and use that if newer than the one from seeded snap.

* Fix gofmt.

* Rename checkTargetSnapdVersion to chooseTargetSnapdVersion (thanks ijohnson)

* Return a struct from chooseTargetSnapdVersion and slightly reorganize the flow to check version inside prepareChroot().

* Added unit test for preseeding with a newer deb.

* Tweak the comment.

* Fix gofmt.

--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -37,8 +37,8 @@ execute: |
   #shellcheck source=tests/lib/preseed.sh
   . "$TESTSLIB/preseed.sh"
 
-  echo "Running pre-seeeding"
-  /usr/lib/snapd/snap-preseed "$IMAGE_MOUNTPOINT"
+  echo "Running pre-seeding"
+  /usr/lib/snapd/snap-preseed "$IMAGE_MOUNTPOINT" | MATCH "using snapd binary: /tmp/snapd-preseed/usr/lib/snapd/snapd"
 
   # mark-preseeded task is where snap-preseed stopped, therefore it's in Doing.
   snap debug state "$IMAGE_MOUNTPOINT"/var/lib/snapd/state.json --change=1 | MATCH "Doing .+ mark-preseeded +Mark system pre-seeded"
