Each image has an id to be distint for other images created manually

--- a/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
@@ -10,6 +10,7 @@ environment:
     BUILD_FROM_CURRENT/refresh: false
     BUILD_FROM_CURRENT/firstboot: true
     USE_CLOUD_INIT: false
+    IMAGE_ID: cloud-init-never
 
 prepare: |
     #shellcheck source=tests/lib/nested.sh
