--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -9,6 +9,7 @@ systems: [ubuntu-19.10-*, ubuntu-2*]
 
 environment:
   IMAGE_MOUNTPOINT: /mnt/cloudimg
+  IMAGE_ID: preseed
 
 prepare: |
   #shellcheck source=tests/lib/nested.sh
