--- a/tests/nested/manual/core-early-config/task.yaml
+++ b/tests/nested/manual/core-early-config/task.yaml
@@ -35,15 +35,14 @@ prepare: |
     # Modify seed to use devmode for pc gadget snap. This is needed for the
     # install hook to have access to /etc/systemd. Ideally we would use
     # system-files plug, but it wouldn't get autoconnected due to assertions.
-    IMAGE_DIR="$(get_image_dir)"
     IMAGE_NAME="$(get_image_name core)"
-    loops=$(kpartx -avs "$IMAGE_DIR/$IMAGE_NAME"  | cut -d' ' -f 3)
+    loops=$(kpartx -avs "$IMAGES_DIR/$IMAGE_NAME"  | cut -d' ' -f 3)
     part=$(echo "$loops" | tail -1)
     tmp=$(mktemp -d)
     mount "/dev/mapper/$part" "$tmp"
     sed -i "$tmp/system-data/var/lib/snapd/seed/seed.yaml" -E -e 's/^(\s+)file: pc_x1.snap/\1file: pc_x1.snap\n\1devmode: true\n/'
     umount "$tmp"
-    kpartx -d "$IMAGE_DIR/$IMAGE_NAME"
+    kpartx -d "$IMAGES_DIR/$IMAGE_NAME"
     rmdir "$tmp"
 
     start_nested_core_vm
