--- a/tests/nested/core/hotplug/task.yaml
+++ b/tests/nested/core/hotplug/task.yaml
@@ -33,7 +33,7 @@ execute: |
     #shellcheck source=tests/lib/hotplug.sh
     . "$TESTSLIB/hotplug.sh"
 
-    if [ "$BUILD_SNAPD_FROM_CURRENT" != "true" ]; then
+    if [ "$BUILD_SNAPD_FROM_CURRENT" != "true" ] && [ "$NEW_CORE_CHANNEL" != "$CORE_CHANNEL" ]; then
         echo "Refresh core snap to desired channel"
         refresh_to_new_core "$NEW_CORE_CHANNEL"
     fi
