--- a/tests/nested/core/extra-snaps-assertions/task.yaml
+++ b/tests/nested/core/extra-snaps-assertions/task.yaml
@@ -13,7 +13,7 @@ execute: |
     execute_remote "snap known model" | MATCH "series: 16"
 
     EXPRESSION="^core .* +latest/$CORE_CHANNEL +canonical\\* +core"
-    if [ "$BUILD_SNAPD_FROM_CURRENT" != "true" ]; then
+    if [ "$BUILD_SNAPD_FROM_CURRENT" = "true" ]; then
         EXPRESSION="^core .* +x1 .* core"
     fi
 
