configcore: use "virtual" configuration for system.timezone
This commit starts using the configuration hijacking code for
the "system.timezone" configuration. This configuration item
becomes "virtual" now. I.e. any Get() call will trigger snapd
to read the actual timezone of the system. And Set() will set
it to the system but not store the result in the state.

--- a/tests/core/snap-set-core-config/task.yaml
+++ b/tests/core/snap-set-core-config/task.yaml
@@ -141,5 +141,11 @@ execute: |
     echo "setting the timezone works"
     cat /etc/timezone > current-timezone
     snap set system system.timezone=Europe/Malta
-    MATCH "Europe/Malta" /etc/timezone
+    MATCH "Europe/Malta" < /etc/timezone
     test "$(readlink -f /etc/localtime)" = "/usr/share/zoneinfo/Europe/Malta"
+    echo "but the timezone setting is not stored in the state"
+    snap get system -d | not grep "timezone"
+
+    echo "and setting the timezone outside of snapd is reflected by snap get"
+    timedatectl set-timezone "America/Denver"
+    snap get system system.timezone | MATCH "America/Denver"
