--- a/spread.yaml
+++ b/spread.yaml
@@ -405,9 +405,9 @@ debug-each: |
             systemctl status nested-vm || true
             journalctl -e --no-pager -u nested-vm || true
 
-            if [ -f "${LOGS_DIR}/serial.log" ]; then
+            if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
                 echo '# nested VM serial boot log'
-                cat "${LOGS_DIR}/serial.log"
+                cat "${NESTED_LOGS_DIR}/serial.log"
             fi
         fi
 
@@ -815,32 +815,30 @@ suites:
         environment:
             NESTED_TYPE: "classic"
             # Channel used to create the nested vm
-            CORE_CHANNEL: '$(HOST: echo "${SPREAD_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
             # Channel used to refresh when testing refresh and revert
-            CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_CORE_REFRESH_CHANNEL:-edge}")'
-            # Channel used to update the core/snapd snaps on some tests
-            NEW_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NEW_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            ENABLE_KVM: '$(HOST: echo "${SPREAD_ENABLE_KVM:-true}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-true}")'
             # Enable tpm in the nested vm in case it is supported
-            ENABLE_TPM: '$(HOST: echo "${SPREAD_ENABLE_TPM:-false}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_ENABLE_SECURE_BOOT:-false}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-false}")'
             # Build and use snapd from current branch
-            BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            WORK_DIR: '/tmp/work-dir'
+            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         kill-timeout: 40m
         debug: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
-            if [ -f "${LOGS_DIR}/serial.log" ]; then
-                cat "${LOGS_DIR}/serial.log"
+            if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
+                cat "${NESTED_LOGS_DIR}/serial.log"
             fi
         prepare: |
             #shellcheck source=tests/lib/pkgdb.sh
@@ -872,31 +870,29 @@ suites:
         environment:
             NESTED_TYPE: "classic"
             # Channel used to create the nested vm
-            CORE_CHANNEL: '$(HOST: echo "${SPREAD_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
             # Channel used to refresh when testing refresh and revert
-            CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_CORE_REFRESH_CHANNEL:-edge}")'
-            # Channel used to update the core/snapd snaps on some tests
-            NEW_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NEW_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            ENABLE_KVM: '$(HOST: echo "${SPREAD_ENABLE_KVM:-true}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-true}")'
             # Enable tpm in the nested vm in case it is supported
-            ENABLE_TPM: '$(HOST: echo "${SPREAD_ENABLE_TPM:-false}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_ENABLE_SECURE_BOOT:-false}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-false}")'
             # Build and use snapd from current branch
-            BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            WORK_DIR: '/tmp/work-dir'
+            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         debug: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
-            if [ -f "${LOGS_DIR}/serial.log" ]; then
-                cat "${LOGS_DIR}/serial.log"
+            if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
+                cat "${NESTED_LOGS_DIR}/serial.log"
             fi
         prepare: |
             #shellcheck source=tests/lib/pkgdb.sh
@@ -933,31 +929,29 @@ suites:
         environment:
             NESTED_TYPE: "core"
             # Channel used to create the nested vm
-            CORE_CHANNEL: '$(HOST: echo "${SPREAD_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
             # Channel used to refresh when testing refresh and revert
-            CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_CORE_REFRESH_CHANNEL:-edge}")'
-            # Channel used to update the core/snapd snaps on some tests
-            NEW_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NEW_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            ENABLE_KVM: '$(HOST: echo "${SPREAD_ENABLE_KVM:-true}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-true}")'
             # Enable tpm in the nested vm in case it is supported
-            ENABLE_TPM: '$(HOST: echo "${SPREAD_ENABLE_TPM:-false}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_ENABLE_SECURE_BOOT:-false}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-false}")'
             # Build and use snapd from current branch
-            BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            WORK_DIR: '/tmp/work-dir'
+            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         debug: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
-            if [ -f "${LOGS_DIR}/serial.log" ]; then
-                cat "${LOGS_DIR}/serial.log"
+            if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
+                cat "${NESTED_LOGS_DIR}/serial.log"
             fi
         prepare: |
             #shellcheck source=tests/lib/pkgdb.sh
@@ -994,27 +988,29 @@ suites:
         environment:
             NESTED_TYPE: "core"
             # Channel used to create the nested vm
-            CORE_CHANNEL: '$(HOST: echo "${SPREAD_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_USE_CLOUD_INIT:-true}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
+            # Use cloud init to make initial system configuration instead of user assertion
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            ENABLE_KVM: '$(HOST: echo "${SPREAD_ENABLE_KVM:-false}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            ENABLE_TPM: '$(HOST: echo "${SPREAD_ENABLE_TPM:-true}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-true}")'
             # Enable secure boot in the nested vm in case it is supported
-            ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_ENABLE_SECURE_BOOT:-true}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-true}")'
             # Build and use snapd from current branch
-            BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            WORK_DIR: '/tmp/work-dir'
+            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         debug: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
-            if [ -f "${LOGS_DIR}/serial.log" ]; then
-                cat "${LOGS_DIR}/serial.log"
+            if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
+                cat "${NESTED_LOGS_DIR}/serial.log"
             fi
         kill-timeout: 40m
         prepare: |
