--- a/tests/nested/core/hotplug/task.yaml
+++ b/tests/nested/core/hotplug/task.yaml
@@ -33,9 +33,9 @@ execute: |
     #shellcheck source=tests/lib/hotplug.sh
     . "$TESTSLIB/hotplug.sh"
 
-    if [ "$BUILD_SNAPD_FROM_CURRENT" != "true" ] && [ "$NEW_CORE_CHANNEL" != "$CORE_CHANNEL" ]; then
+    if [ "$NESTED_BUILD_SNAPD_FROM_CURRENT" != "true" ] && [ "$NESTED_CORE_REFRESH_CHANNEL" != "$NESTED_CORE_CHANNEL" ]; then
         echo "Refresh core snap to desired channel"
-        refresh_to_new_core "$NEW_CORE_CHANNEL"
+        refresh_to_new_core "$NESTED_CORE_REFRESH_CHANNEL"
     fi
 
     if execute_remote "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
