--- a/tests/nested/core/image-build/task.yaml
+++ b/tests/nested/core/image-build/task.yaml
@@ -12,7 +12,7 @@ execute: |
 
     set +x
     export SPREAD_EXTERNAL_ADDRESS=localhost:8022
-    "$WORK_DIR/spread" -v external:ubuntu-core-16-64:tests/main/ubuntu-core-reboot \
+    "$NESTED_WORK_DIR/spread" -v external:ubuntu-core-16-64:tests/main/ubuntu-core-reboot \
                             external:ubuntu-core-16-64:tests/main/install-store \
                             external:ubuntu-core-16-64:tests/main/interfaces-system-observe \
                             external:ubuntu-core-16-64:tests/main/op-remove-retry | while read -r line; do echo "> $line"; done
