--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -28,7 +28,7 @@ prepare: |
   create_nested_classic_vm
   mkdir -p "$IMAGE_MOUNTPOINT"
   IMAGE_NAME=$(get_image_name classic)
-  mount_ubuntu_image "$IMAGES_DIR/$IMAGE_NAME" "$IMAGE_MOUNTPOINT"
+  mount_ubuntu_image "$NESTED_IMAGES_DIR/$IMAGE_NAME" "$IMAGE_MOUNTPOINT"
 
   # on 20.04 snapd from the deb is newer than snapd from seeds;
   # this is not a sensible scenario for preseeding but since
