--- a/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
@@ -118,7 +118,7 @@ execute: |
     force_stop_nested_vm
 
     # add the cloud-init drive as a CD-ROM drive
-    PARAM_CD="-cdrom $(pwd)/seed1.iso"
+    NESTED_PARAM_CD="-cdrom $(pwd)/seed1.iso"
 
     # start the unit so that it re-uses the existing drive and doesn't re-setup
     # ssh
