Do not set rsyslog.disable in core18 config defaults test as this service is not present on core18. Since we evaluate all disabled services on snap set, this currently silently fails because of the peculiar beahvior of systemctl, which prints an error and returns exit=0 if --root= option is passed to 'disable' command.

--- a/tests/core/config-defaults-once/task.yaml
+++ b/tests/core/config-defaults-once/task.yaml
@@ -7,6 +7,8 @@ summary: |
 systems: [ubuntu-core-18-*]
 
 environment:
+    # XXX: to test systems other than core18 with more defaults we will need
+    # separate defaults file(s).
     GADGET_FILE: gadget-defaults.yaml
 
 prepare: |
