fix missing import

--- a/tests/nested/manual/refresh-revert-fundamentals/task.yaml
+++ b/tests/nested/manual/refresh-revert-fundamentals/task.yaml
@@ -57,6 +57,8 @@ restore: |
     rm -f "$NESTED_IMAGES_DIR/ubuntu-core.img"
 
 debug: |
+    #shellcheck source=tests/lib/nested.sh
+    . "$TESTSLIB/nested.sh"
     nested_execute "snap changes" || true
 
 execute: |
