--- a/spread.yaml
+++ b/spread.yaml
@@ -334,6 +334,15 @@ backends:
         allocate: |
             ADDRESS $SPREAD_EXTERNAL_ADDRESS
         systems:
+            - ubuntu-16.04-64:
+                  username: external
+                  password: ubuntu
+            - ubuntu-18.04-64:
+                  username: external
+                  password: ubuntu
+            - ubuntu-20.04-64:
+                  username: external
+                  password: ubuntu
             - ubuntu-core-16-64:
                   username: external
                   password: ubuntu
@@ -368,6 +377,23 @@ backends:
                   username: external
                   password: ubuntu
             - ubuntu-core-20-arm-32:
+                  username: external
+                  password: ubuntu
+
+    classic:
+        type: adhoc
+        environment:
+            SPREAD_EXTERNAL_ADDRESS: '$(HOST: echo "${SPREAD_EXTERNAL_ADDRESS:-localhost:8022}")'
+        allocate: |
+            ADDRESS $SPREAD_EXTERNAL_ADDRESS
+        systems:
+            - ubuntu-16.04-64:
+                  username: external
+                  password: ubuntu
+            - ubuntu-18.04-64:
+                  username: external
+                  password: ubuntu
+            - ubuntu-20.04-64:
                   username: external
                   password: ubuntu
 
@@ -535,7 +561,7 @@ prepare: |
         fi
     fi
 
-    if [[ "$SPREAD_SYSTEM" == debian-* ]]; then
+    if [[ "$SPREAD_SYSTEM" == debian-* ]] || ( [[ "$SPREAD_SYSTEM" == ubuntu-* ]] && [ "$SPREAD_BACKEND" == "classic" ] ); then
         apt-get update && apt-get install -y eatmydata
     fi
 
