--- a/tests/lib/snaps/test-snapd-policy-app-consumer/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-policy-app-consumer/meta/snap.yaml
@@ -377,6 +377,9 @@ apps:
   dummy:
     command: bin/run
     plugs: [ dummy ]
+  tee:
+    command: bin/run
+    plugs: [ tRee]
   thumbnailer-service:
     command: bin/run
     plugs: [ thumbnailer-service ]
