interfaces/tee: fix typo in test definition

--- a/tests/lib/snaps/test-snapd-policy-app-consumer/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-policy-app-consumer/meta/snap.yaml
@@ -379,7 +379,7 @@ apps:
     plugs: [ dummy ]
   tee:
     command: bin/run
-    plugs: [ tRee]
+    plugs: [ tee]
   thumbnailer-service:
     command: bin/run
     plugs: [ thumbnailer-service ]
