--- a/tests/nested/manual/core20-early-config/task.yaml
+++ b/tests/nested/manual/core20-early-config/task.yaml
@@ -74,3 +74,7 @@ execute: |
 
     # check console-conf disabled
     nested_exec "cat /var/lib/console-conf/complete" | MATCH "console-conf has been disabled by the snapd system configuration"
+
+    # check journal is persistent
+    nested_exec "test -d /var/log/journal"
+    nested_exec "test -e /var/log/install-mode.log"
