devicestate: keep log from install-mode on installed system
This commit ensures that we capture the full log of the
ephemeral install mode on the writable disk when installing
the system.

This is useful for debugging if install mode worked as expected
or to get logs about why things are different than they should
have been.

--- a/tests/nested/manual/core20-early-config/task.yaml
+++ b/tests/nested/manual/core20-early-config/task.yaml
@@ -71,6 +71,10 @@ execute: |
 
     check_core20_early_config
 
+    # check that we go the install log after the transition to run mode
+    nested_exec "test -e /var/log/install-mode.log"
+    xxx
+
     # now transition to recover mode and check it again
     boot_id="$(nested_get_boot_id)"
     # TODO:UC20: shouldn't need to specify the label here, fix when snap reboot
