--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -276,7 +276,7 @@ jobs:
               echo "::set-output name=already-ran::true"
           fi
     - name: Run spread tests
-      if: "contains(github.event.pull_request.labels.*.name, 'Run nested') && steps.cached-results.outputs.already-ran != 'true'"
+      if: "(contains(github.event.pull_request.labels.*.name, 'Run nested') || ( contains(github.event.pull_request.labels.*.name, 'UC20') && ${{ matrix.system }}  == 'ubuntu-20.04-64' ) ) && steps.cached-results.outputs.already-ran != 'true'"
       env:
           SPREAD_GOOGLE_KEY: ${{ secrets.SPREAD_GOOGLE_KEY }}
       run: |
