spread: run haveged on the host
Haveged should help with the host running out of entropy.

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/spread.yaml
+++ b/spread.yaml
@@ -1029,7 +1029,7 @@ suites:
             #shellcheck source=tests/lib/pkgdb.sh
             . "$TESTSLIB"/pkgdb.sh
             distro_update_package_db
-            distro_install_package snapd qemu qemu-utils genisoimage sshpass qemu-kvm cloud-image-utils ovmf kpartx xz-utils
+            distro_install_package snapd qemu qemu-utils genisoimage sshpass qemu-kvm cloud-image-utils ovmf kpartx xz-utils haveged
             snap install ubuntu-image --classic
 
             # Install the snapd built
